IGNITE-28462 Upgrade central Maven plugin versions